# smoothmath

./: .gitignore  .readthedocs.yaml  AUTHORS  DEVELOPMENT.md  LICENSE  Pipfile  README.md  main.py  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  expression.rst  index.rst  install.rst  smoothmath.rst  usage.rst
python/: Pipfile  README_PYTHON.md  pyproject.toml
python/forward_accumulation/: expression.py  expression_test.py  main.py  value_and_partial.py
python/reverse_accumulation/: expression.py  main.py
src/smoothmath/: __init__.py  all_partials.py  computed_global_partial.py  computed_global_partials.py  computed_local_partials.py  expression.py  global_differential.py  global_partial.py  local_differential.py  point.py  synthetic.py  types.py  utilities.py  variable_values.py
test_helpers/: assert_derivatives.py  assert_partials.py
tests/: accumulators_test.py  all_partials_test.py  computed_local_partials_test.py  derivative_test.py  differential_test.py  expression_test.py  global_differential_test.py  global_partial_test.py  local_differential_test.py  located_differential_test.py  math_functions_test.py  normalize_test.py  optimize_synthetic_test.py  partial_test.py  point_test.py  reducers_test.py  utilities_test.py  variable_values_test.py
tests/expression/: add_test.py  constant_test.py  cosine_test.py  divide_test.py  exponential_test.py  logarithm_test.py  minus_test.py  multiply_test.py  negation_test.py  nth_power_test.py  nth_root_test.py  plus_test.py  power_test.py  reciprocal_test.py  sine_test.py  square_test.py  (+2 more)
(+205 files in other folders)
