[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smoothmath"
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
