[project]
name = "smoothmath"
version = "0.0.1"
authors = [
  { name="Taylor Hummon", email="taylor.hummon@gmail.com" },
]
description = "Evaluate and differentiate smooth expressions!"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/taylorhummon/smoothmath"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "test_helpers"]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
